[package]
edition = "2021"
name = "yew-map-project"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "web"

[dependencies]
chrono = {version = "0.4", features = ["unstable-locales", "wasmbind"]}
log = "0.4"
serde = "1.0"
serde_yaml = "0.8"
wasm-logger = "0.2"
yew = {path = "./packages/yew", features = ["csr"]}
yew-router = {path = "./packages/yew-router"}
